# lead-capture-bot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docker/: Dockerfile  docker-compose.yml
src/: main.py
src/app/: container.py
src/config/: __init__.py  constants.py  settings.py
src/domain/dto/: __init__.py  lead_create_dto.py  lead_draft_dto.py  lead_response_dto.py  lead_storage_row_dto.py
src/domain/entities/: __init__.py  lead.py
src/domain/enums/: __init__.py  lead_status.py
src/fsm/: states.py
src/fsm/storage/: factory.py  sql_storage.py
src/notifications/: manager_registry.py
src/notifications/interfaces/: notification_service.py
src/notifications/telegram/: notifier.py  templates.py
src/services/: lead_service.py  survey_service.py  validation_service.py
src/services/nlp/: base.py  models.py  noop.py
src/storage/: factory.py
src/storage/google_sheets/: repository.py
src/storage/interfaces/: lead_repository.py
src/telegram/: bot.py  navigation.py
src/telegram/keyboards/: inline.py
src/telegram/messages/: templates.py
src/telegram/middlewares/: error_handler.py  services.py
src/telegram/routers/: __init__.py  cancel.py  fallback.py  review.py  start.py  survey.py
tests/unit/: test_lead_service.py  test_validation.py
