[project]
name = "lead-capture-bot"
version = "1.0.0"
description = "Telegram bot for qualifying incoming leads"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "gspread>=6.1.0",
    "google-auth>=2.35.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.20.0",
    "apscheduler>=3.10.4",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
